derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ParentRecord/count_of_all_parent_records.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Count all rows inside the `parent_record` table.
    pub fn count_of_all_parent_records<'a>(&'a self) -> u64 {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().parent_record().count()
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Count all rows inside the `parent_record` table.
    pub fn count_of_all_parent_records<'a>(&'a self) -> u64 {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().parent_record().count()
    }
}
