derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ParentRecord/execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_parent_record_table_were_deleted.snap
---
source: derive/src/characterization_tests.rs
---
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of all referencing tables after multiple rows of the referenced table `parent_record` were deleted.
    pub fn execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_parent_record_table_were_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_values_of_rows_to_delete: &'a [u64],
    ) -> Result<
        std::collections::HashMap<
            &'a u64,
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
        std::collections::HashMap<
            &'a u64,
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_child_marker_table_has_no_foreign_key_attribute_referencing_the_parent_record_table;
        let mut entries = std::collections::HashMap::new();
        for primary_key_value_of_a_row_to_delete in primary_key_values_of_rows_to_delete {
            entries.insert(primary_key_value_of_a_row_to_delete, vec![]);
        }
        let mut error = false;
        match crate::spacetimedsl::internal::DSLInternals::execute_on_delete_strategies_of_the_child_marker_table_after_multiple_rows_of_the_parent_record_table_were_deleted(
            dsl,
            &strategy,
            primary_key_values_of_rows_to_delete,
        ) {
            Err(child_entries_by_primary_key_value_of_a_row_to_delete) => {
                for (primary_key_value_of_a_row_to_delete, mut child_entries) in child_entries_by_primary_key_value_of_a_row_to_delete {
                    entries
                        .get_mut(&primary_key_value_of_a_row_to_delete)
                        .expect(
                            &format!(
                                "{primary_key_value_of_a_row_to_delete} should exist in entries."
                            ),
                        )
                        .append(&mut child_entries);
                }
                error = true;
            }
            Ok(child_entries_by_primary_key_value_of_a_row_to_delete) => {
                for (primary_key_value_of_a_row_to_delete, mut child_entries) in child_entries_by_primary_key_value_of_a_row_to_delete {
                    entries
                        .get_mut(&primary_key_value_of_a_row_to_delete)
                        .expect(
                            &format!(
                                "{primary_key_value_of_a_row_to_delete} should exist in entries."
                            ),
                        )
                        .append(&mut child_entries);
                }
            }
        };
        match error {
            false => Ok(entries),
            true => Err(entries),
        }
    }
}
