derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ParentRecord/get_all_parent_records.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `parent_record` table.
    pub fn get_all_parent_records<'a>(&'a self) -> impl Iterator<Item = ParentRecord> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().parent_record().iter()
    }
}
